--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,8 +25,7 @@
     <string name="welcome_to_disabledroid">WELCOME TO DISABLEDROID</string>
     <string name="please_authenticate_your_finger_before_use">Please authenticate your finger before use</string>
     <string name="place_your_finger_on_sensor">Place Your Finger On Sensor</string>
-    <string name="please_wait_until_we_redirect">Please wait until we redirect...</string>
-    <string name="todo">TODO</string>
+    <string name="please_wait_until_we_redirect">Please wait until we redirect…</string>
     <string name="day_planner">DAY PLANNER</string>
     <string name="save_update_or_delete_your_task_to_stay_in_tune_regularly_and_properly">Save, Update or Delete your task to stay in tune regularly and properly.</string>
     <string name="todo_list">TODO LIST</string>
@@ -50,6 +49,28 @@
     <string name="enter_your_plan">Enter Your Plan</string>
     <string name="how_are_you">How Are You ?</string>
     <string name="chat_bot">Chat With Bot</string>
-    <string name="hello">Hello</string>
     <string name="ask_or_say">Ask or Say</string>
+    <string name="show_saved_locations">Show Saved Locations</string>
+    <string name="longitude">Longitude :</string>
+    <string name="latitude">Latitude :</string>
+    <string name="e_g_00_00">e.g. 00.00</string>
+    <string name="address">Address :</string>
+    <string name="e_g_3_maijee_road">e.g. 3, Maijee Road</string>
+    <string name="postal_code">Postal Code :</string>
+    <string name="e_g_700_007">e.g. 700 007</string>
+    <string name="location">Location :</string>
+    <string name="e_g_kolkata">e.g. Kolkata</string>
+    <string name="state">State :</string>
+    <string name="e_g_west_bengal">e.g. West Bengal</string>
+    <string name="country">Country :</string>
+    <string name="e_g_india">e.g. India</string>
+    <string name="get_location">Get Location</string>
+    <string name="show_location_on_map">Show Location on Map</string>
+    <string name="add_update_the_task">Add / Update the Task</string>
+    <string name="enter_the_task_here">Enter the task here</string>
+    <string name="hello">Hello</string>
+    <string name="are_you_sure_to_delete_it_permanently">Are you sure to delete it permanently ?</string>
+    <string name="delete_location">Delete Location</string>
+    <string name="settings">Settings</string>
+    <string name="share">Share</string>
 </resources>
