--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="delete_location">Delete Location</string>
     <string name="settings">Settings</string>
     <string name="share">Share</string>
+    <string name="todo">TODO</string>
 </resources>
